Añadir menú de navegación con enlaces internos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,21 @@
     <title>Mi Proyecto Web</title>
 </head>
 <body>
+    <nav>
+    <a href="#inicio">Inicio</a>
+    <a href="#acerca">Acerca</a>
+    <a href="#contacto">Contacto</a>
+</nav>
     <h1>Bienvenido/a a mi sitio web</h1>
     <p>Este es un proyecto para aprender Git y GitHub.</p>
+    <section id="acerca">
+    <h2>Acerca</h2>
+    <p>Este sitio web es un ejercicio para aprender Git y GitHub.</p>
+</section>
+
+<section id="contacto">
+    <h2>Contacto</h2>
+    <p>Esta es la sección de contacto (solo demostración).</p>
+</section>
 </body>
 </html>
