Añadir footer con enlaces de redes (texto)

--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
     <h2>Acerca</h2>
     <p>Este sitio web es un ejercicio para aprender Git y GitHub.</p>
 </section>
-
 <section id="contacto">
     <h2>Contacto</h2>
     <p>Esta es la sección de contacto (solo demostración).</p>
 </section>
+<footer>
+    <hr>
+    <p>Sígueme: Twitter | Instagram | LinkedIn</p>
+    <p>&copy; 2025 Mi Proyecto Web</p>
+</footer>
 </body>
 </html>
